syntax = "proto3";
package verana.perm.v1;

import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/verana-labs/verana/x/permission/types";

// Permission types
enum PermissionType {
  PERMISSION_TYPE_UNSPECIFIED = 0;
  PERMISSION_TYPE_ISSUER = 1;
  PERMISSION_TYPE_VERIFIER = 2;
  PERMISSION_TYPE_ISSUER_GRANTOR = 3;
  PERMISSION_TYPE_VERIFIER_GRANTOR = 4;
  PERMISSION_TYPE_ECOSYSTEM = 5;  // Changed from PERMISSION_TYPE_TRUST_REGISTRY
  PERMISSION_TYPE_HOLDER = 6;
}

// Validation process states
enum ValidationState {
  VALIDATION_STATE_UNSPECIFIED = 0;
  VALIDATION_STATE_PENDING = 1;
  VALIDATION_STATE_VALIDATED = 2;
  VALIDATION_STATE_TERMINATED = 3;
  VALIDATION_STATE_TERMINATION_REQUESTED = 4;
}

message Permission {
  uint64 id = 1;
  uint64 schema_id = 2;
  PermissionType type = 3;
  string did = 4;
  string grantee = 5 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  google.protobuf.Timestamp created = 6 [(gogoproto.stdtime) = true];
  string created_by = 7 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  google.protobuf.Timestamp extended = 8 [(gogoproto.stdtime) = true];
  string extended_by = 9 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // NEW: Slashing related fields
  google.protobuf.Timestamp slashed = 10 [(gogoproto.stdtime) = true];
  string slashed_by = 11 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  google.protobuf.Timestamp repaid = 12 [(gogoproto.stdtime) = true];
  string repaid_by = 13 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // END NEW
  google.protobuf.Timestamp effective_from = 14 [(gogoproto.stdtime) = true];
  google.protobuf.Timestamp effective_until = 15 [(gogoproto.stdtime) = true];
  google.protobuf.Timestamp modified = 16 [(gogoproto.stdtime) = true];
  uint64 validation_fees = 17;
  uint64 issuance_fees = 18;
  uint64 verification_fees = 19;
  uint64 deposit = 20;
  // NEW: Slashing deposit fields
  uint64 slashed_deposit = 21;
  uint64 repaid_deposit = 22;
  // END NEW
  google.protobuf.Timestamp revoked = 23 [(gogoproto.stdtime) = true];
  string revoked_by = 24 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  google.protobuf.Timestamp terminated = 25 [(gogoproto.stdtime) = true];
  string terminated_by = 26 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string country = 27;
  uint64 validator_perm_id = 28;
  ValidationState vp_state = 29;
  google.protobuf.Timestamp vp_exp = 30 [(gogoproto.stdtime) = true];
  google.protobuf.Timestamp vp_last_state_change = 31 [(gogoproto.stdtime) = true];
  uint64 vp_validator_deposit = 32;
  uint64 vp_current_fees = 33;
  uint64 vp_current_deposit = 34;
  string vp_summary_digest_sri = 35;
  google.protobuf.Timestamp vp_term_requested = 36 [(gogoproto.stdtime) = true];
}

message PermissionSession {
  string id = 1;
  string controller = 2;
  uint64 agent_perm_id = 3;
  repeated SessionAuthz authz = 4;
  google.protobuf.Timestamp created = 5 [(gogoproto.stdtime) = true];
  google.protobuf.Timestamp modified = 6 [(gogoproto.stdtime) = true];
}

message SessionAuthz {
  uint64 executor_perm_id = 1;
  uint64 beneficiary_perm_id = 2;
  uint64 wallet_agent_perm_id = 3;
}
